# projMap

./: .gitignore  CHANGES_REPORT_LAYER.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  DIRECTORY.md  projMap Phase 0 + Phase 1 最终技术方案
projmap/: DIRECTORY.md  __init__.py  api.py  chunker.py  cli.py  config.py  extractor.py  resolvers.py  scanner.py  schemas.py  util.py  viewmodel.py
projmap/display/: DIRECTORY.md  formatters.py  resolvers.py  viewmodel.py
projmap/eval/: __init__.py  brief_eval.py  relation_eval.py
projmap/ingestion/: DIRECTORY.md  extractor.py  scanner.py
projmap/pipeline/: DIRECTORY.md  extraction.py  migrate.py  skill.py
projmap/prompts/: __init__.py  brief_section_v1.md  brief_status_v1.md  enrichment_query_v1.md  enrichment_v1.md  examples_v1.json  extraction_v1.md  relation_discovery_v1.md  schema_v1.json
projmap/report/: DIRECTORY.md  brief_builder.py  evidence_builder.py  grouping.py  llm_enricher.py  prompts.py  relation_discovery.py  render_markdown.py  source_resolver.py
projmap/storage/: DIRECTORY.md  cache.py  duckdb_store.py
tests/: DIRECTORY.md  test_api.py  test_brief_sections.py  test_cache.py  test_chunk_identity.py  test_cli_json.py  test_config.py  test_duckdb.py  test_eval.py  test_external_extraction.py  test_hash.py  test_prompt_registry.py  test_relation_discovery.py  test_resolvers.py  test_scanner.py  test_schemas.py  test_skill_and_config.py  test_viewmodel.py
tests/fixtures/sample_project/: CLAUDE.md  README.md  TODO.md
tests/fixtures/v5/: edges_related.json  node_decision_full.json  (+6 more)
(+1 files in other folders)
