[project]
name = "projmap"
version = "0.1.0"
description = "Project memory and intelligence map"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer",
    "rich",
    "duckdb",
    "lancedb",
    "pydantic",
    "anthropic",
    "openai",
    "networkx",
    "jinja2",
    "python-frontmatter",
    "tiktoken",
    "orjson",
    "tomli_w",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
projmap = "projmap.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
